core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/fields/content-type-field-dragabble-item/content-type-field-dragabble-item.component.scss
@use "variables" as *;
@import "mixins";

:host {
    background: $white;
    cursor: move;
    display: flex;
    flex-direction: column;
    height: $content-type-field-height;
    transition: box-shadow $basic-speed;

    &:hover {
        box-shadow: $md-shadow-5;
        z-index: 1;
    }

    &:last-child {
        margin-bottom: 0;
    }

    &.gu-transit {
        opacity: 0.4;
    }
}

.field__properties {
    background: $color-palette-primary-100;
    padding: $spacing-2 $spacing-3;
    display: flex;
    align-items: center;
    flex-grow: 1;
    min-height: 73px;

    dot-icon {
        margin-right: $spacing-1;
    }

    .field__info {
        display: flex;
        flex-direction: column;
        flex-grow: 1;
        overflow: hidden;

        .field__label {
            color: $color-palette-gray-700;
            font-size: $font-size-xs;
            min-height: $font-size-xs;
        }

        .field__name {
            @include truncate-text;
            color: black;
            font-size: $font-size-md;
        }
    }

    .field__actions {
        display: flex;
        flex-shrink: 0;
        margin-left: $spacing-1;
    }
}

.field__attr__container {
    padding: $spacing-1 $spacing-3 $spacing-1;
    display: flex;
    flex-direction: column;
    background: $white;
    z-index: 1;
    border-radius: $border-radius-sm;
    overflow: hidden;
    gap: $spacing-1;
    min-height: 80px;

    &.open {
        overflow: visible;
    }

    .field__attr__group {
        display: flex;
        justify-content: space-between;
    }

    .field__attr {
        display: flex;
        gap: $spacing-1;
    }

    .small {
        flex-direction: column;
    }

    i {
        height: fit-content;
        cursor: pointer;
        display: flex;
        align-items: center;
        justify-content: center;
        color: $color-palette-primary-500;
        font-size: $font-size-md;

        &.pi-angle-down {
            margin-top: 8px;
            align-self: flex-start;
        }

        &.pi-angle-up {
            margin-bottom: 8px;
            align-self: flex-end;
        }
    }
}

